--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
 	</head>
 	<body>
+		<h1>Test</h1>
 		<div id="fb-root"></div>
 		<script>(function(d, s, id) {
 		var js, fjs = d.getElementsByTagName(s)[0];
